<resources>
    <string name="app_name">Smart Home</string>
    <string name="default_status">Not connected yet</string>

    <string name="toolbar_status_connected">Connected</string>
    <string name="toolbar_status_disconnect">Disconnected</string>
    <string name="toolbar_status_error">Error</string>s

    <!--login view-->
    <string name="username_editText">Username</string>
    <string name="password_editText">Password</string>
    <string name="remember_check">Remember</string>

    <string name="login_btn">Login</string>
    <string name="logout_btn">Logout</string>

    <string name="title_home_1">Home 1</string>
    <string name="title_profile">Profile</string>
    <string name="title_home_2">Home 2</string>
    <string name="alert_status">ALERT</string>
    <string name="alert_fire">Your house is ON FIRE!</string>
    <string name="alert_gas">Detected GAS LEAK inside your house!</string>
</resources>
